fixed layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ section #portfolio {
 
 img.portfolio-img {
     display: block;
-    width: 22em;
+    max-width: 100%;
     height: auto;
     margin-left: auto;
     margin-right: auto;
@@ -129,7 +129,7 @@ h2#contact {
     
     img#profile-image {
         display: block;
-        width: 15em;
+        max-width: 100%;
         height: auto;
         margin: 0em;
         padding-left: 1em;
@@ -207,7 +207,7 @@ h2#contact {
     #project1, #project2, #project3, #project4, #project5, #project6 {
         display: flex;
         flex-direction: column;
-        flex-basis: 15%;
+        flex-basis: 45%;
     }
 
     #end-nav {
@@ -239,7 +239,7 @@ h2#contact {
 
     img.portfolio-img {
         display: block;
-        width: 25em;
+        max-width: 100%;
         height: auto;
         margin-left: auto;
         margin-right: auto;
@@ -282,5 +282,6 @@ h2#contact {
     #project1, #project2, #project3, #project4, #project5, #project6 {
         display: flex;
         flex-direction: column;
+        flex-basis: 30%;
     }
 }
